--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%- webpackConfig.metadata.title %></title>
+    <title> <%- webpackConfig.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%- webpackConfig.metadata.baseUrl %>">
     <!-- imported CSS are concatenated and added automatically -->
@@ -10,6 +10,7 @@
     <div class="splash">
       <div class="message"><%- webpackConfig.metadata.title %></div>
       <i class="fa fa-spinner fa-spin"></i>
+      <p>Hello WOrd</p>
     </div>
     <% if (webpackConfig.metadata.ENV === 'development') { %>
     <!-- Webpack Dev Server reload -->
